Changed icons and worked on color and blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
 title: Esperanza Rozas
-description: she/her | Data science graduate from UC San Diego
+description: she/her | Currently watching - Across the Spider-verse
 
 baseurl: #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
